# NexaFlow

./: .gitignore  AGENTS.md
apps/: .env.example  Makefile  main.py  pyproject.toml
apps/alembic/: env.py
apps/alembic/versions/: 202607040001_identity_workspace_foundation.py  202607040002_team_memberships.py  202607050001_audit_logs.py  202607050002_system_logs.py  202607050003_tenant_constraints.py  202607050004_knowledge_bases_resource_permissions.py  202607060001_model_registry.py  202607060002_workspace_team_descriptions.py  202607060003_rename_model_knowledge_tables.py  202607060004_knowledge_documents.py
apps/nexaflow/: __init__.py  main.py  testing.py
apps/nexaflow/audit/: api.py  models.py  repositories.py  schemas.py  services.py
apps/nexaflow/core/: config.py  secrets.py  seed.py  validation.py
apps/nexaflow/db/: session.py
apps/nexaflow/identity/: __init__.py  api.py  dependencies.py  deps.py  models.py  repositories.py  schemas.py  security.py  services.py  test.py
apps/nexaflow/knowledge/: api.py  models.py  repositories.py  schemas.py  services.py  test.py
apps/nexaflow/knowledge_bases/: api.py  models.py  services.py  test.py
apps/nexaflow/llm/: api.py  models.py  repositories.py  runtime.py  services.py  test.py
apps/nexaflow/model_registry/: api.py  models.py  schemas.py  services.py  test.py
apps/nexaflow/resource_permissions/: models.py
apps/nexaflow/system_logs/: models.py  services.py
apps/nexaflow/teams/: __init__.py  api.py  models.py  repositories.py  schemas.py  services.py  (+1 more)
apps/tests/: smoke_identity_workspace.py
(+92 files in other folders)
