[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "cryptography>=49.0.0",
    "fastapi>=0.139.0",
    "greenlet>=3.5.3",
    "openai>=2.44.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.50.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx2>=2.5.0",
]
